--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -218,106 +218,9 @@ input:valid {
 
 
 input:invalid {
-  border-color: red;
+  border-color: rgb(248, 4, 4);
 }
 
-/* @media screen and (max-width: 469px) {
-  .header__text {
-    display: none;
-  }
-
-  .hero__blok {
-    width: 100%;
-  }
-
-  .popup {
-    width: 450px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .popup {
-    width: 350px;
-  }
-
-  .popup__body {
-    width: 350px;
-  }
-}
-.popup {
-  margin: 0;
-}
-
-@media screen and (max-width: 320px) {
-  .pix {
-    width: 320px;
-    height: 320px;
-  }
-
-  .pixes {
-    width: 320px;
-    height: 320px;
-  }
-
-  .hero__blok {
-    width: 320px;
-    height: 320px;
-  }
-
-  .hero__pix {
-    width: 320px;
-    height: 320px;
-  }
-
-  .row {
-    width: 320px;
-  }
-
-  .header__btn {
-    border: none;
-    height: 100%;
-    font-size: 13px;
-  }
-
-  .header__navbar {
-    padding-top: 4%;
-  }
-
-  .footer__block {
-    padding: 0;
-  }
-
-  .footer__text {
-    padding: 15px 12px;
-  }
-
-  .header__logo {
-    padding-left: 25px;
-  }
-
-  .popup__body {
-    width: 296px;
-  }
-
-  .popup__title {
-    font-size: 20px;
-    padding: 18px 40px;
-  }
-
-  .popup__text {
-    font-size: 16px;
-  }
-
-  .popups__content {
-    width: 288px;
-  }
-
-  .popups__text-two {
-    padding: 40px 20px;
-  }
-}
-.popups__content {
-  margin-right: 23px;
-} */
 
 
 @media screen and (max-width: 320px) {
